--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT=3000
 API_URL=http://localhost:3000
 DB_USER=postgres
-DB_HOST=localhost
+DB_HOST=postgres.railway.internal
 DB_NAME=flight_management
-DB_PASSWORD=postgres
+DB_PASSWORD=pdpWzRXAQcgFlxeWLsAKZPhohGGIMtNz
 DB_PORT=5432
 JWT_SECRET=your_secure_jwt_secret_key
